# diesel-async-paginate-example

./: Cargo.toml  diesel.toml
migrations/2024-04-09-014145_book/: down.sql  up.sql
migrations/2024-04-09-014149_post/: down.sql  up.sql
src/: main.rs  models.rs  paginate.rs  schema.rs  utils.rs
